--- a/src/styles/mainPage.css
+++ b/src/styles/mainPage.css
@@ -2,6 +2,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -11,4 +12,9 @@
 
 .mainPageMenu{
     color: #f1faee;
+    width: 15%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
