--- a/src/styles/mainPage.css
+++ b/src/styles/mainPage.css
@@ -1,12 +1,11 @@
 .mainPageDiv{
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
 }
 
 .mainPageHeadingAndDescription{
+    width: 50%;
+    margin: 8vh auto;
+    text-align: center;
     height: 10%;
     display: flex;
     flex-direction: column;
@@ -15,6 +14,8 @@
 }
 
 .mainPageMenu{
+    width: 80%;
+    margin: 12vh auto;
     color: #f1faee;
     width: 75%;
     height: 50%;
