Added simple registration

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -12,9 +12,14 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 10%
+    width: 10%;
+    position: relative;
 }
 
 .register{
+    cursor: pointer;
+}
+
+.logout{
     cursor: pointer;
 }
